# BilibiliCrawler

./: .gitignore  BilibiliCommentsCrawler.spec  README.md  requirements.txt
backend/: sidecar.py
config/: config.py
desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: AnalysisWorkspace.tsx  BackgroundLayer.tsx  BottomActionBar.tsx  RightPanel.tsx  SideNav.tsx  TaskWorkspace.tsx  TitleBar.tsx
desktop/src/lib/: analysisCharts.ts  tauri.ts
scripts/: build_backend.ps1  build_installer.ps1
src/api/: bilibili_api.py
src/crawler/: comment_crawler.py  dynamic_crawler.py
src/exporter/: csv_exporter.py
src/gui/: main_window.py
src/processor/: analysis_processor.py  data_processor.py
tests/: test_sidecar_analysis.py
tests/fixtures/: analysis_comments.json
