[package]
name = "bilibilicrawler_desktop"
version = "3.0.0"
description = "BilibiliCrawler desktop app"
authors = ["BilibiliCrawler"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"

[profile.release]
debug = true
